# spack

./: .codecov.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .readthedocs.yml  CHANGELOG.md  COPYRIGHT  FEATURES.md  IMPLEMENTATION_NOTES.md  LICENSE  NEWS.md  README.md  bench_fast_parser.py  bench_spec_init.py  bench_tokenization.py  pyproject.toml  pytest.ini  requirements.txt
.ci/: gitlab-ci.yml
.ci/gitlab/: forward_dotenv_variables.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yaml  bootstrap.yml  build-containers.yml  ci.yaml  coverage.yml  import-check.yaml  prechecks.yml  scorecard.yml  stale.yaml  sync-packages.yaml  triage.yml  unit_tests.yaml  valid-style.yml
.github/workflows/requirements/style/: requirements.txt
etc/spack/: README.md  include.yaml
etc/spack/defaults/: bootstrap.yaml  concretizer.yaml  config.yaml  include.yaml  packages.yaml  repos.yaml
etc/spack/defaults/base/: concretizer.yaml  config.yaml  packages.yaml  repos.yaml
etc/spack/defaults/darwin/: concretizer.yaml  packages.yaml
etc/spack/defaults/windows/: config.yaml  packages.yaml
etc/spack/site/: README.md
examples/: deploy-example.yaml  package-example.yaml
lib/spack/_vendoring/: __init__.py
lib/spack/docs/: .gitignore  Makefile  advanced_topics.rst  basic_usage.rst  binary_caches.rst  bootstrapping.rst  build_settings.rst  build_systems.rst  chain.rst  conf.py  config_yaml.rst  configuration.rst  configuring_compilers.rst  containers.rst  contribution_guide.rst  developer_guide.rst  env_vars_yaml.rst  environments.rst  environments_basics.rst  extensions.rst  features.rst  frequently_asked_questions.rst  getting_help.rst  getting_started.rst  gpu_configuration.rst  in_the_news.rst  include_yaml.rst  index.rst  installing_prerequisites.rst  mirrors.rst  module_file_support.rst  package_api.rst  package_fundamentals.rst  package_review_guide.rst  packages_yaml.rst  packaging_guide.rst  packaging_guide_advanced.rst  packaging_guide_build.rst  packaging_guide_creation.rst  packaging_guide_testing.rst  (+10 more)
lib/spack/docs/.spack/: repos.yaml
lib/spack/docs/_common/: og.rst
lib/spack/docs/_templates/: base.html
lib/spack/docs/build_systems/: autotoolspackage.rst  bundlepackage.rst  cachedcmakepackage.rst  cmakepackage.rst  cudapackage.rst  custompackage.rst  inteloneapipackage.rst  luapackage.rst  makefilepackage.rst  mavenpackage.rst  mesonpackage.rst  octavepackage.rst  perlpackage.rst  pythonpackage.rst  qmakepackage.rst  racketpackage.rst  rocmpackage.rst  rpackage.rst  rubypackage.rst  sconspackage.rst  sippackage.rst  sourceforgepackage.rst  wafpackage.rst
lib/spack/env/: cc
lib/spack/llnl/: __init__.py
lib/spack/llnl/util/: filesystem.py  lang.py  link_tree.py  lock.py
lib/spack/spack/: __init__.py  aliases.py  archspec.py  audit.py  binary_distribution.py  build_environment.py  buildcache_migrate.py  buildcache_prune.py  builder.py  caches.py  ci.py  compiler.py  concretize.py  config.py  cray_manifest.py  database.py  dependency.py  deptypes.py  directives.py  directives_meta.py  directory_layout.py  enums.py  error.py  extensions.py  externals.py  fetch_strategy.py  filesystem_view.py  graph.py  hash_types.py  install_test.py  installer.py  jobserver.py  main.py  mixins.py  multimethod.py  new_installer.py  package.py  package_base.py  package_prefs.py  package_test.py  (+30 more)
lib/spack/spack/bootstrap/: __init__.py  _common.py  clingo.py  config.py  core.py  environment.py
lib/spack/spack/build_systems/: _checks.py  autotools.py  cached_cmake.py  cargo.py  cmake.py  compiler.py  cuda.py  go.py  intel.py  meson.py  msbuild.py  octave.py  oneapi.py  python.py  r.py  rocm.py  xorg.py
lib/spack/spack/ci/: __init__.py  common.py  gitlab.py
lib/spack/spack/cmd/: __init__.py  add.py  arch.py  audit.py  blame.py  bootstrap.py  build_env.py  buildcache.py  cd.py  change.py  checksum.py  ci.py  clean.py  clone.py  commands.py  compiler.py  compilers.py  concretize.py  config.py  containerize.py  create.py  debug.py  deconcretize.py  dependencies.py  dependents.py  deprecate.py  dev_build.py  develop.py  diff.py  edit.py  env.py  extensions.py  external.py  fetch.py  find.py  gc.py  gpg.py  graph.py  help.py  info.py  (+38 more)
lib/spack/spack/compilers/: __init__.py  _msvc.py  adaptor.py  config.py  error.py  flags.py  libraries.py
lib/spack/spack_installable/: main.py
share/spack/: setup-env.csh  setup-env.fish  setup-env.sh  spack-completion.bash  spack-completion.fish
share/spack/bash/: spack-completion.bash
share/spack/docker/: entrypoint.bash
share/spack/docs/: binary_caches.rst  build_settings.rst  configuring_compilers.rst  contribution_guide.rst  frequently_asked_questions.rst  getting_started.rst  installing_prerequisites.rst  packages_yaml.rst  packaging_guide_creation.rst  signing.rst  windows.rst
share/spack/docs-src/: Makefile  advanced_topics.rst  conf.py  config_yaml.rst  configuration.rst  contribution_guide.rst  developer_guide.rst  environments.rst  extensions.rst  package_fundamentals.rst  packaging_guide_advanced.rst  packaging_guide_testing.rst  repositories.rst
share/spack/fish/: spack-completion.fish
share/spack/qa/: environment_activation.py  run-unit-tests  setup-env-test.sh  setup.sh
src/spack_ext/: __init__.py
src/spack_ext/buildcache/: __init__.py  manager.py  models.py
src/spack_ext/cli/: __init__.py  main.py.bak
src/spack_ext/config/: __init__.py  manager.py  models.py
src/spack_ext/deploy/: __init__.py  models.py  orchestrator.py
src/spack_ext/health/: __init__.py  checker.py  models.py
src/spack_ext/optimize/: __init__.py  engine.py  models.py
src/spack_ext/snapshot/: __init__.py  manager.py  models.py
src/spack_ext/utils/: __init__.py  validators.py
src/spack_ext/validate/: __init__.py
tests/: __init__.py
tests/unit/: test_buildcache.py  test_config.py  test_health.py  test_optimize.py  test_packages.py  test_snapshot.py
var/spack/: spack-repo-index.yaml
var/spack/repos/: README.md
var/spack/vendoring/: vendor.txt
(+551 files in other folders)
